--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,7 +19,7 @@ a {
 
 .top-wrapper {
   padding: 180px 0 100px 0;
-  background-image: url(top.png);
+  background-image: url(https://github.com/zyuumonziyari/zyuumon/blob/main/IMG_2418.JPG);
   background-size: cover;
   color: white;
   text-align: center;
