--- a/stylesheet.css
+++ b/stylesheet.css
@@ -63,7 +63,7 @@ width:300px;
 
 .btn {
   padding: 8px 24px;
-  color: white;
+  color: black;
   display: inline-block;
   opacity: 0.8;
   border-radius: 4px;
