--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,7 +22,7 @@ width:300px;
 
 .top-wrapper {
   padding: 180px 0 100px 0;
-  background-image: url(https://github.com/zyuumonziyari/zyuumon/blob/main/IMG_2418.JPG);
+  background-image: url(https://github.com/zyuumonziyari/zyuumon/blob/main/2022.0526.png);
   background-size: cover;
   color: white;
   text-align: center;
